[package]
name = "lorawan-counter"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[build-dependencies]
slint-build = "1.2.0"

[dependencies]
slint = "1.2.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
