[package]
name = "lorawan-counter"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[build-dependencies]
slint-build = "1.2.0"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
slint = "1.2.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
